--- a/src/Makefile
+++ b/src/Makefile
@@ -3,11 +3,10 @@ PKG = kmeans
 $(PKG).gfn: $(PKG).inp $(PKG).spec $(PKG)_sample.inp
 	gretlcli --makepkg $(PKG).inp
 
-$(PKG).zip: $(PKG).gfn ./docs/$(PKG).pdf
-	echo makepkg $(PKG).zip | gretlcli -b -
 
-install: $(PKG).zip
-	echo pkg install $(PKG).zip --local | gretlcli -b -
+install: $(PKG).gfn
+	echo pkg install $(PKG).gfn --local | gretlcli -b -
+	cat $(PKG)_help.md | tee ../README.md
 
 clean:
-	rm -f $(PKG).zip
+	rm -f $(PKG).gfn
